# meeting-entropy

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  pyproject.toml  yolo.md
corpus/: de.yaml  en.yaml  fr.yaml  universal.yaml
meeting_entropy/: __init__.py  cli.py  consent.py  test_whisper.py
meeting_entropy/audio/: __init__.py  microphone_whisperer.py  microphone_whisperer.py.bak  the_uncomfortable_listener.py
meeting_entropy/dashboard/: __init__.py  terminal_of_doom.py
meeting_entropy/detector/: __init__.py  awkward_silence_appreciator.py  buzzword_evangelist_detector.py  entropy_oracle.py
meeting_entropy/export/: __init__.py  evidence_collector.py
tests/: test_buzzword_detection.py  test_consent.py  test_display_public.py  test_entropy_oracle.py
